@@ -1,5 +1,5 @@
 Package: mirt
-Version: 0.5.0
+Version: 0.5.1
 Date: 2013-01-16
 Type: Package
 Title: Multidimensional Item Response Theory
