@@ -1,3 +1,7 @@
+
+
+* mixedmirt() bug fix when COV argument supplied (reported by Aaron Kaat)
+
 ----------------------------------------------------------------
 mirt 0.5.0
 ----------------------------------------------------------------
